tests/baselines/reference/es5-asyncFunctionWithStatements.errors.txt
tests/cases/compiler/es5-asyncFunctionWithStatements.ts(4,5): error TS1300: 'with' statements are not allowed in an async function block.
tests/cases/compiler/es5-asyncFunctionWithStatements.ts(4,11): error TS2410: All symbols within a 'with' block will be resolved to 'any'.
tests/cases/compiler/es5-asyncFunctionWithStatements.ts(10,5): error TS1300: 'with' statements are not allowed in an async function block.
tests/cases/compiler/es5-asyncFunctionWithStatements.ts(10,11): error TS2410: All symbols within a 'with' block will be resolved to 'any'.
tests/cases/compiler/es5-asyncFunctionWithStatements.ts(16,5): error TS1300: 'with' statements are not allowed in an async function block.
tests/cases/compiler/es5-asyncFunctionWithStatements.ts(16,11): error TS2410: All symbols within a 'with' block will be resolved to 'any'.
tests/cases/compiler/es5-asyncFunctionWithStatements.ts(24,5): error TS1300: 'with' statements are not allowed in an async function block.
tests/cases/compiler/es5-asyncFunctionWithStatements.ts(24,11): error TS2410: All symbols within a 'with' block will be resolved to 'any'.


==== tests/cases/compiler/es5-asyncFunctionWithStatements.ts (8 errors) ====
    declare var x, y, z, a, b, c;
    
    async function withStatement0() {
        with (x) {
        ~~~~
!!! error TS1300: 'with' statements are not allowed in an async function block.
              ~
!!! error TS2410: All symbols within a 'with' block will be resolved to 'any'.
            y;
        }
    }
    
    async function withStatement1() {
        with (await x) {
        ~~~~
!!! error TS1300: 'with' statements are not allowed in an async function block.
              ~~~~~~~
!!! error TS2410: All symbols within a 'with' block will be resolved to 'any'.
            y;
        }
    }
    
    async function withStatement2() {
        with (x) {
        ~~~~
!!! error TS1300: 'with' statements are not allowed in an async function block.
              ~
!!! error TS2410: All symbols within a 'with' block will be resolved to 'any'.
            a;
            await y;
            b;
        }
    }
    
    async function withStatement3() {
        with (x) {
        ~~~~
!!! error TS1300: 'with' statements are not allowed in an async function block.
              ~
!!! error TS2410: All symbols within a 'with' block will be resolved to 'any'.
            with (z) {
                a;
                await y;
                b;
            }
        }
    }